# anthropic-rs

./: Cargo.toml  PLAN-realtime-websocket.md  README.md
examples/: basic_message.rs  batch_processing.rs  bedrock.rs  extended_thinking.rs  file_upload.rs  foundry.rs  oauth_login.rs  realtime_audio.rs  realtime_function_calling.rs  realtime_text.rs  streaming.rs  structured_output.rs  tool_use.rs  vertex.rs  web_search.rs
src/: blocking.rs  client.rs  config.rs  error.rs  lib.rs  page.rs  platform.rs
src/backends/: anthropic_backend.rs  bedrock.rs  foundry.rs  mod.rs  vertex.rs
src/batches/: mod.rs  params.rs  results.rs  types.rs
src/beta/: mod.rs
src/beta/files/: mod.rs
src/beta/skills/: mod.rs
src/http/: middleware.rs  mod.rs  retry.rs
src/messages/: count_tokens.rs  create.rs  mod.rs
src/models_api/: mod.rs  params.rs  types.rs
src/oauth/: callback_server.rs  config.rs  error.rs  flow.rs  mod.rs  pkce.rs  storage.rs  token.rs
src/realtime/: audio.rs  client.rs  client_events.rs  conversation.rs  error.rs  mod.rs  platform.rs  server_events.rs  session.rs  types.rs
src/streaming/: accumulator.rs  events.rs  mod.rs  sse.rs
src/types/: bash_tool.rs  cache_control.rs  citation.rs  code_execution.rs  computer_use.rs  container.rs  content_block.rs  content_block_param.rs  document.rs  error_response.rs  image.rs  memory_tool.rs  message.rs  metadata.rs  mod.rs  model.rs  output_config.rs  server_tool_use.rs  service_tier.rs  stop_reason.rs  text.rs  text_editor.rs  thinking.rs  tool.rs  tool_choice.rs  tool_result.rs  tool_search.rs  tool_use.rs  usage.rs  web_fetch.rs  web_search.rs
tests/: client_tests.rs  error_tests.rs  realtime_serde_tests.rs  serde_roundtrip.rs  streaming_tests.rs
